# zmk-leen-display

./: CMakeLists.txt  Kconfig
boards/shields/leen-display/: Kconfig.defconfig  Kconfig.shield  leen_display.conf  leen_display.overlay
boards/shields/leen-display/boards/: nice_nano.overlay
include/: raw_hid_bridge.h
include/fonts/: lv_font_jetbrainsmono_16.h  lv_font_jetbrainsmono_20.h  lv_font_jetbrainsmono_24.h  lv_font_jetbrainsmono_40.h  lv_font_montserrat_custom_24.h  lv_font_symbol_16.h  lv_font_symbol_20.h  nerd_modifiers_20.h  nerd_modifiers_28.h
src/: brightness.c  custom_status_screen.c  display_rotate_init.c  raw_hid_bridge.c
src/fonts/: lv_font_jetbrainsmono_16.c  lv_font_jetbrainsmono_20.c  lv_font_jetbrainsmono_24.c  lv_font_jetbrainsmono_40.c  lv_font_montserrat_custom_24.c  lv_font_symbol_16.c  lv_font_symbol_20.c  nerd_modifiers_20.c  nerd_modifiers_24.c  nerd_modifiers_28.c
src/widgets/: battery.c  battery.h  battery_big.c  bongo_cat.c  bongo_cat.h  bongo_cat_images.c  bongo_cat_images_inverted.c  cc.c  clock.c  clock.h  connection.c  connection.h  invert_image.py  layer.c  layer.h  modifiers.c  modifiers.h  sysicon.c  sysicon.h  test.py  volume.c  volume.h  wpm_status.c
zephyr/: module.yml
